--- a/skin.nereus/language/resource.language.de_de/strings.po
+++ b/skin.nereus/language/resource.language.de_de/strings.po
@@ -2301,10 +2301,10 @@ msgstr "Eigenes Menu erstellen"
 #: /xml/Skinsettings.xml
 msgctxt "#40316"
 msgid "use Skin Shortcuts"
-msgstr "nutze Skin Shortcuts"
+msgstr "Nutze Skin Shortcuts"
 
 #: /xml/Skinsettings.xml
 msgctxt "#40317"
 msgid "  ∟ Reset Shortcuts"
-msgstr "  ∟ Standarteinstellung Wiederherstellen"
+msgstr "Standarteinstellung wiederherstellen"
 
